package es.uniovi.dlp.ast;

public interface Expression extends ASTNode {
}
