package es.uniovi.dlp.program.definition;

public class Definition {
}
