@startuml Program
skinparam style strictuml
skinparam monochrome true


interface ASTNode {
    getLine(): int
    getColumn(): int
}

class Program {
    definitions: List<Definition>
}

interface Statement

interface Expression

interface Definition

class VariableDefinition {
}

class FunctionDefinition {
    statements: List<Statement>
    variableDefinitions: List<VariableDefinition>
}

interface Type

ASTNode <|.. Program
ASTNode <|-- Statement
ASTNode <|-- Expression
ASTNode <|-- Definition
Program o-- "0..n" Definition
Statement o.. Expression
Definition <|.. VariableDefinition
Definition <|.. FunctionDefinition
FunctionDefinition o-- "0..n" Statement
FunctionDefinition o-- "0..n" VariableDefinition
VariableDefinition o-- "1..n" Type

@enduml
